--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -1,19 +1,26 @@
 @charset "utf-8"
-/* You'll add your styles here */
+/* We'll add other styles here */
 
 
 /* HTML and Body Styles */
+html {
+    background-color: hsl(27, 72%, 72%);
+}
 
-
-
-
+body {
+    color: rgb(91, 91, 91);
+    background-color: ivory;
+}
 
 /* Heading Styles */
 
+h1 {
 
+}
 
+h2 {
 
-
+}
 
 /* Aside and Blockquote Styles */
 
