--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -1,4 +1,4 @@
-@charset "utf-8"
+@charset "utf-8";
 /* We'll add other styles here */
 
 
@@ -12,6 +12,8 @@ body {
     background-color: ivory;
     border: 1px solid black;
 }
+
+
 
 /* Heading Styles */
 
