--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 /* We'll add other styles here */
 
 
@@ -11,18 +11,29 @@ html {
 body {
     color: rgb(91, 91, 91);
     background-color: ivory;
+    font-family: Geneva, Verdana, sans-serif;
 }
 
 
 
 /* Heading Styles */
-
-h1 {
-
+h1, h2 {
+    font-family: Quicksand, Geneva, Verdana, sans-serif;
 }
 
-h2 {
+.syllabus h1, .syllabus h2 {
+    color: rgb(101, 101, 101);
+    background-color: rgb(255, 185, 255);
+}
 
+#about h1 {
+    color: white;
+    background-color: rgb(222, 128, 60);
+}
+
+#about h2 {
+    color: white;
+    background-color: rgb(235, 177, 131);
 }
 
 /* Aside and Blockquote Styles */
