Thu, Mar 7, 2024, 9:50 PM +00:00

--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -66,7 +66,16 @@ nav > ul {
 
 
 /* Footer Styles */
-
+footer address {
+    background-color: rbg(222, 128, 60);
+    color: rgba(255, 255, 255, 0.7);    /* 75% transparent */
+    font: normal        /* style */
+        small-caps      /* variant */
+        bold            /* weight */
+        0.9em/3em       /* size/line-height */
+        Quicksand, Geneva, Verdana, sans-serif;
+    text-align: center;
+}
 
 
 
