Thu, Mar 7, 2024, 9:55 PM +00:00

--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -67,9 +67,17 @@ nav > ul {
 
 /* Footer Styles */
 footer address {
-    background-color: rbg(222, 128, 60);
-    color: rgba(255, 255, 255, 0.7);    /* 75% transparent */
-    /*font: normal small-caps bold 0.9em/3em Quicksand, Geneva, Verdana, sans-serif;*/
+    background-color: rgb(222, 128, 60);
+
+    /* Text is 75% transparent */
+    color: rgba(255, 255, 255, 0.7);
+
+    font: normal                /* style        */
+        small-caps              /* variant      */
+        bold                    /* weight       */
+        0.9em/3em               /* size/height  */
+        Quicksand, Geneva, Verdana, sans-serif;
+
     text-align: center;
 }
 
