Thu, Mar 7, 2024, 10:05 PM +00:00

--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -60,7 +60,17 @@ nav > ul {
 
 
 /* List Styles */
+.syllabus ol {
+    list-style-type: upper-roman;
+}
 
+.syllabus ol ol {
+    list-style-type: upper-alpha;
+}
+
+.syllabus ol ol ol {
+    list-style-type: decimal;
+}
 
 
 
