--- a/css-tutorial/styles/styles.css
+++ b/css-tutorial/styles/styles.css
@@ -53,14 +53,14 @@ aside blockquote {
 
 aside blockquote::before {
     content: open-quote;
-    font-family: "Times New Roman", Times, serif;
+    font-family: serif;
     font-size: 1.6em;
     font-weight: bold;
 }
 
 aside blockquote::after {
     content: close-quote;
-    font-family: "Times New Roman", Times, serif;
+    font-family: serif;
     font-size: 1.6em;
     font-weight: bold;
 }
